# rust-microservices

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: connection.rs  main.rs
src/sample/: handler.rs  mod.rs  model.rs  repository.rs  router.rs
