[package]
name = "rust-microservice"
version = "0.1.0"
authors = ["Gene Kuo <yuchiung10@yahoo.com.tw>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_codegen = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
env_logger = "0.5.12"
log = "0.4.6"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
